--- a/home_page.html
+++ b/home_page.html
@@ -151,6 +151,7 @@
       </div>
 
       <div class="content">
+        <!-- View Collection -->
         <div class="content__view_collection">
           <div class="row">
             <div class="col ps-4 pt-3">
@@ -167,8 +168,42 @@
             </div>
           </div>
         </div>
-        <div id="plates">
-          <!-- Plates -->
+        <!-- You may like -->
+        <div class="content__like mb-4">
+          <div class="row mb-2">
+            <div class="col">
+              <h2>You may like</h2>
+            </div>
+            <div class="col text-end">
+              <span class="content__see_more"> See more </span>
+            </div>
+          </div>
+          <div class="row mb-2">
+            <div class="col-4">
+              <img src="./images/img_genre1.png" />
+            </div>
+            <div class="col-4">
+              <img src="./images/img_genre2.png" />
+            </div>
+            <div class="col-4">
+              <img src="./images/img_genre3.png" />
+            </div>
+          </div>
+        </div>
+        <!-- New in stock -->
+        <div class="content__new mb-4">
+          <div class="row mb-2">
+            <div class="col">
+              <h2>New in stock</h2>
+            </div>
+            <div class="col text-end">
+              <span class="content__see_more"> See more </span>
+            </div>
+          </div>
+
+          <div id="plates">
+            <!-- Plates -->
+          </div>
         </div>
       </div>
     </div>
